--- a/student_info.html
+++ b/student_info.html
@@ -14,19 +14,23 @@
     </head>
 
     <body>
-      <div class="navbar-fixed">
-        <nav>
+      <div class="navbar-fixed" style="height: 110px">
+        <nav class="nav-extended tamu-navbar">
           <div class="nav-wrapper tamu-navbar">
-            <a href="#" class="brand-logo">Ph.D. Review System</a>
+            <a href="javascript:void(0)" class="brand-logo">Ph.D. Review System</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
               <li class="active"><a href="<?= getScriptUrl();?>?v=student_view">Student Information</a></li>
               <li><a href="<?= getScriptUrl();?>?v=student_review">Reviews</a></li>
               <li><a href="<?= getScriptUrl();?>?v=index">Logout</a></li>
             </ul>
           </div>
+      <div class="nav-content">
+        <ul class="tabs tabs-transparent">
+         <li class="tab"><a href="javascript:void(0)" class="active">Student View</a></li>
+      </ul>
+    </div>
         </nav>
       </div>
-
       <div class="container">
       <form action="javascript:void(0)" onsubmit="updateClicked()">
           <div class="row">
