--- a/student_details.html
+++ b/student_details.html
@@ -41,16 +41,16 @@
             <form class="col s12">
               <div class="row">
                 <div class="input-field col s3">
-                  <input id="ln" type="text" disabled>
-                  <label for="ln"><?= record[3] ?></label>
+                  <input id="ln" type="text" value="<?= record[3] ?>" disabled>
+                  <label for="ln">Last Name</label>
                 </div>
                 <div class="input-field col s3">
-                  <input id="fn" type="text" class="validate"  disabled>
-                  <label for="fn"><?= record[2] ?></label>
+                  <input id="fn" type="text" class="validate" value="<?= record[2] ?>" disabled>
+                  <label for="fn">First Name</label>
                 </div>
                 <div class="input-field col s2">
-                  <input id="uin_" type="text" class="validate"  disabled>
-                  <label for="uin_"><?= record[4] ?></label>
+                  <input id="uin_" type="text" class="validate" value="<?= record[4] ?>" disabled>
+                  <label for="uin_">UIN</label>
                 </div>
                 <div class="input-field col s4">
                   <input id="email" type="text" class="validate" value="<?= record[5] ?>" disabled>
