improved login UI

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             <div class="card horizontal">
               <div class="card-stacked">
                 <div class="card-content">
-                  <p>Information about Ph.D. Review system goes here! Needs to lightly larger to look good
+                  <p>Welcome to the Ph.D. Review System for the Department of Computer Science &amp; Engineering, Texas A&amp;M University
                   </p>
                 </div>
                 <div class="card-action">
-                  <a href="<?= getScriptUrl();?>">Login!</a>
+                  <a href="<?= getScriptUrl();?>" style="color:#500000"><b>Login</b></a>
                 </div>
               </div>
             </div>
