Active Year, Department Letter and Sheet change

--- a/student_info.html
+++ b/student_info.html
@@ -131,8 +131,8 @@
 
         <div class="row">
           <div class="file-field input-field s3">
-            <div class="btn">
-              <span>Upload CV</span>
+            <div id = "up" class="btn">
+              <span >Upload CV</span>
               <input type="file" id="cv">
             </div>
             <div class="file-path-wrapper s3">
@@ -143,9 +143,9 @@
 
         <div class="row">
           <div class="center">
-            <a class="btn waves-effect waves-light cancel" onclick="resetProfileFields()"> Discard
-            </a>
-            <button class="btn waves-effect waves-light"> Update!
+            <button class="btn waves-effect waves-light cancel" onclick="resetProfileFields()" id = "discard"> Discard
+            </button>
+            <button class="btn waves-effect waves-light" id = "update"> Update!
             </button>
           </div>
         </div>
