--- a/student_review_javascript.html
+++ b/student_review_javascript.html
@@ -1,16 +1,34 @@
 <script>
 function initialize(){
+//  var a  = document.getElementById("review-year");
+//  var d = new Date();
+//  for(y = d.getFullYear(); y > 2010; y--) {
+//    var optn = document.createElement("OPTION");
+//    optn.text = y;
+//    optn.value = y;
+//    
+//    a.options.add(optn);
+//  }
+//  M.FormSelect.init(a);
+
+   google.script.run.withSuccessHandler(populate_dropdown).getAllReviewYears();
+}
+
+function populate_dropdown(all_review_years){
+  
   var a  = document.getElementById("review-year");
-  var d = new Date();
-  for(y = d.getFullYear(); y > 2010; y--) {
+  var i;
+  for (i = 0; i < all_review_years.length; i++) {
     var optn = document.createElement("OPTION");
-    optn.text = y;
-    optn.value = y;
+    optn.text = all_review_years[i];
+    optn.value = all_review_years[i];;
     
     a.options.add(optn);
   }
   M.FormSelect.init(a);
+  
 }
+
 
 function uploadClicked(){
   
@@ -88,6 +106,16 @@ function get_data(){
   var x = document.getElementById("result");
   x.style.display = "none";
   
+  document.getElementById('upload').disabled = false;
+  document.getElementById('discard').disabled = false;
+  document.getElementById('rname').disabled = false;
+  document.getElementById('iname').disabled = false;
+  document.getElementById('report').disabled = false;
+  document.getElementById('improvement').disabled = false;
+  document.getElementById('up').classList.add("btn") ;
+  document.getElementById('up1').classList.add("btn") ;
+  
+  
   var a = document.getElementById('re_url');
   a.removeAttribute("href");
   
@@ -130,12 +158,31 @@ function onSuccess(urls){
     console.log("ipurl"+urls.improvement);
     b.href = urls.improvement;
   }
-
-  var x = document.getElementById("result");
-  x.style.display = "block";
   
   document.getElementById('VR').disabled = false;
   document.getElementById('VI').disabled = false;
+  
+  google.script.run.withSuccessHandler(function(activeYear) {
+      
+      var year = document.getElementById("review-year").value; 
+ 
+      if(activeYear != year) {
+        console.log(activeYear);
+        document.getElementById('upload').disabled = true;
+        document.getElementById('discard').disabled = true;
+        document.getElementById('rname').disabled = true;
+        document.getElementById('iname').disabled = true;
+        document.getElementById('report').disabled = true;
+        document.getElementById('improvement').disabled = true;
+        document.getElementById('up').classList.remove("btn") ;
+        document.getElementById('up1').classList.remove("btn") ;
+        alert(" This Review Year is not Active");
+      }
+    }).getActiveReviewYear();
+  
+  
+  var x = document.getElementById("result");
+  x.style.display = "block";
   
   M.updateTextFields()
 }
@@ -154,6 +201,13 @@ function check_re(){
   }
 }
 
+function check_dl(){
+  var b = document.getElementById('dl_url');
+  if(b.href==""){
+    alert("Department Letter is not available");
+  }
+}
+
 function get_comments(){
   
   var year = document.getElementById("review-year").value;
@@ -165,7 +219,9 @@ function get_comments(){
 
 function display_comments(comments){
   if (comments !=""){
-    document.getElementById("textarea1").value = comments;
+    var a = document.getElementById("textarea1");
+    a.value = comments;
+    M.textareaAutoResize($('#textarea1'));
   }
   else{
     document.getElementById("textarea1").value = " No Reviews Available Now";
@@ -173,6 +229,8 @@ function display_comments(comments){
   
   var x = document.getElementById("rde");
   x.style.display = "block";
+  
+  M.updateTextFields();
   
 }
 
