Final Bug fixes student side

--- a/student_info.html
+++ b/student_info.html
@@ -126,7 +126,7 @@
           </div>
 
           <div class="row">
-            <a id ="cv_url"><button class="btn waves-effect waves-light" id = "VCV" onclick="check_cv()">View CV</button></a>
+            <a id ="cv_url" class="btn waves-effect waves-light" id = "VCV" onclick="check_cv()">View CV</a>
           </div>
 
         <div class="row">
@@ -143,8 +143,8 @@
 
         <div class="row">
           <div class="center">
-            <button class="btn waves-effect waves-light cancel" onclick="resetProfileFields()" id = "discard"> Discard
-            </button>
+            <a class="btn waves-effect waves-light cancel" onclick="resetProfileFields()" id = "discard"> Discard
+            </a>
             <button class="btn waves-effect waves-light" id = "update"> Update!
             </button>
           </div>
