--- a/student_review.html
+++ b/student_review.html
@@ -21,7 +21,7 @@
           <div class="nav-wrapper tamu-navbar">
             <a href="javascript:void(0)" class="brand-logo">Ph.D. Review System</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-              <li><a href="<?= getScriptUrl();?>?v=student_info">Student Information</a></li>
+              <li><a href="<?= getScriptUrl();?>?v=student_view">Student Information</a></li>
               <li class="active"><a href="<?= getScriptUrl();?>?v=student_review">Reviews</a></li>
               <li><a href="<?= getScriptUrl();?>?v=index">Logout</a></li>
 
